5161
To elaborate, this is unrelated to primitives, Boolean, and java.  Any explicit type parameter along with any attempt to select a non-existent member will crash the same way.
{code}
scala> new Foo[Vector[Int]](List.NO_SUCH_THING)
<console>:7: error: value NO_SUCH_THING is not a member of object List
       new Foo[Vector[Int]](List.NO_SUCH_THING)
                                 ^

Exception in thread "main" java.lang.AssertionError: assertion failed
	at scala.Predef$$.assert(Predef.scala:85)
	at scala.tools.nsc.ast.TreeGen.gd3$$1(TreeGen.scala:131)
	at scala.tools.nsc.ast.TreeGen.stableTypeFor(TreeGen.scala:128)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$30.apply(Typers.scala:2431)
{code}
